welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: value || is not a member of Int
	return (Math.abs(num - (num / 10) * 10) || Math.abs(num - ((num / 10) + 1) * 10))
                                                ^