welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
	return (Math.abs(num - (num / 10) * 10) || Math.abs(num - ((num / 10) + 1) * 10))
}